--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -46,8 +46,8 @@ development_status:
   # Epic 1: Foundation & Infrastructure (6 stories)
   # Establishes technical foundation for all subsequent development
   epic-1: contexted
-  1-1-initialize-nextjs-project-with-core-dependencies: backlog
-  1-2-configure-tailwind-with-playful-nordic-theme: backlog
+  1-1-initialize-nextjs-project-with-core-dependencies: done
+  1-2-configure-tailwind-with-playful-nordic-theme: done
   1-3-set-up-supabase-project-and-environment-variables: backlog
   1-4-install-shadcn-ui-and-core-components: backlog
   1-5-configure-deployment-on-vercel: backlog
