--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -48,10 +48,10 @@ development_status:
   epic-1: contexted
   1-1-initialize-nextjs-project-with-core-dependencies: done
   1-2-configure-tailwind-with-playful-nordic-theme: done
-  1-3-set-up-supabase-project-and-environment-variables: review
-  1-4-install-shadcn-ui-and-core-components: review
-  1-5-configure-deployment-on-vercel: drafted
-  1-6-set-up-database-schema-with-supabase-migrations: backlog
+  1-3-set-up-supabase-project-and-environment-variables: done
+  1-4-install-shadcn-ui-and-core-components: done
+  1-5-configure-deployment-on-vercel: backlog  # SKIPPED: User not repo owner - defer until permissions resolved
+  1-6-set-up-database-schema-with-supabase-migrations: ready-for-dev
   epic-1-retrospective: optional
 
   # Epic 2: User Authentication & Credit System (6 stories)
