--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -51,7 +51,7 @@ development_status:
   1-3-set-up-supabase-project-and-environment-variables: done
   1-4-install-shadcn-ui-and-core-components: done
   1-5-configure-deployment-on-vercel: backlog  # SKIPPED: User not repo owner - defer until permissions resolved
-  1-6-set-up-database-schema-with-supabase-migrations: ready-for-dev
+  1-6-set-up-database-schema-with-supabase-migrations: done
   epic-1-retrospective: optional
 
   # Epic 2: User Authentication & Credit System (6 stories)
