--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -57,8 +57,8 @@ development_status:
   # Epic 2: User Authentication & Credit System (6 stories)
   # Enables user accounts, Google login, and credit-based payment system
   # BLOCKS: Epic 3-6 (features require authentication)
-  epic-2: backlog
-  2-1-implement-google-oauth-authentication: backlog
+  epic-2: contexted
+  2-1-implement-google-oauth-authentication: done
   2-2-display-user-profile-with-credit-balance: backlog
   2-3-implement-credit-purchase-flow-with-stripe-checkout: backlog
   2-4-display-credit-transaction-history: backlog
