--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "next": "^14.2.3",
+    "openai": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^20.0.0",
