--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -75,7 +75,7 @@ development_status:
   3-3-build-norwegian-pronunciation-optimizer-with-gpt4: review
   3-4-create-phonetic-diff-viewer-component: done
   3-5-implement-song-generation-api-with-suno-integration: done
-  3-6-create-ai-generation-progress-modal-component: ready-for-dev
+  3-6-create-ai-generation-progress-modal-component: done
   3-7-implement-webhook-handler-for-suno-completion: backlog
   3-8-build-song-player-card-component: backlog
   3-9-implement-free-30-second-preview-generation: backlog
