--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -111,7 +111,7 @@ development_status:
   7-2-create-onboarding-flow-for-first-time-users: review
   7-3-create-faq-and-help-documentation-page: review
   7-4-add-example-songs-showcase-page: deferred  # Moved to future-enhancements.md
-  7-5-implement-friendly-error-messages-with-recovery-actions: backlog
+  7-5-implement-friendly-error-messages-with-recovery-actions: review
   epic-7-retrospective: optional
 
   # Epic 8: System Resilience & Operations (4 stories for MVP)
