--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -20,5 +20,5 @@ development_status:
 
   # Epic 2: UI Polish & Bug Fixes
   epic-2: in-progress
-  2-1-ui-polish-bug-fixes: ready-for-dev
+  2-1-ui-polish-bug-fixes: review
   epic-2-retrospective: backlog
